SET(GCCXML_SUPPORT ${GCCXML_SOURCE_DIR}/Support)

IF(UNIX)
  # Install UNIX compiler support files.
  INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/gccxml_find_flags
    DESTINATION ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}
    ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY})
  SUBDIRS(GCC Intel MIPSpro)
ELSE(UNIX)
  # Install Windows compiler support files.
  INSTALL(
    DIRECTORY Borland
    DESTINATION ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}
    ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY}
    PATTERN "CVS" EXCLUDE
    PATTERN "CMakeLists.txt" EXCLUDE
    )
ENDIF(UNIX)
