IF(UNIX)
  # Install UNIX compiler support files.
  INSTALL(PROGRAMS gccxml_find_flags
    DESTINATION ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}
    ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY})

  INSTALL(
    DIRECTORY GCC Intel MIPSpro
    DESTINATION ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}
    ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY}
    PATTERN "find_flags"
      PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
                  OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
    PATTERN "CVS" EXCLUDE
    PATTERN "CMakeLists.txt" EXCLUDE
    PATTERN ".#*" EXCLUDE
    )
ELSE(UNIX)
  # Install Windows compiler support files.
  INSTALL(
    DIRECTORY Borland
    DESTINATION ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}
    ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY}
    PATTERN "CVS" EXCLUDE
    PATTERN "CMakeLists.txt" EXCLUDE
    PATTERN ".#*" EXCLUDE
    )
ENDIF(UNIX)
